# Renewal-Upsell-Advisor

./: .dockerignore  .gitattributes  .gitignore  ACCOUNT_CHURN_FIX.md  Dockerfile  FRONTEND_DATA_FIX.md  RELUME_PROMPTS.md  UI_UX_ENHANCEMENT_PLAN.md  promt.txt  render.yaml  setup_s007_backend.py
Backend/: .gitignore  Dockerfile  README.md  docker-compose.yml  dump_schema.py  excel_schema.json  import_supabase_data.py  inspect_excel.py  migrate_schema.py  pyproject.toml  requirements.txt  restore_data.py  seed_data.py  supabase_full_export.xlsx
Backend/app/: main.py
Backend/app/api/: advisor.py  dashboard.py  deps.py  websocket.py
Backend/app/core/: config.py  exceptions.py  logging.py  security.py
Backend/app/db/: base.py  connection.py  session.py  supabase_connection.py
Backend/app/middleware/: error_handler.py  request_logging.py
Backend/app/models/: __init__.py  account.py  activity_log.py  app_settings.py  campaign.py  churn_prediction.py  contact.py  email_campaign.py  interaction.py  metrics_history.py  ml_score_history.py  opportunity.py  prediction.py  renewal.py  salesforce_sync_log.py  sentiment_analysis.py  support_ticket.py  transaction.py  upsell_opportunity.py  usage_metric.py  voice_call.py  webhook_event.py  workflow.py
Backend/app/schemas/: account.py  activity.py  analytics.py  campaign.py  common.py  lifecycle.py  metrics.py  opportunity.py  prediction.py  voice_call.py  workflow.py
Backend/app/services/: activity_log.py  campaign_runner.py  genai.py  llm_engine.py  salesforce.py  stripe.py
Backend/app/utils/: formatters.py  helpers.py  validators.py
Backend/data/: s007_synthetic_data.csv
Backend/docs/: LOCAL_TWILIO_TUNNEL.md  VOICE_CALL_SETUP.md
Backend/ml_models/churn/: .gitkeep  churn_model_best.joblib  churn_model_best_20260214_192352.pkl  preprocessing.joblib
Backend/ml_models/health_score/: .gitkeep  health_score_model_best.joblib  health_score_model_best_20260214_224009.pkl  health_score_preprocessing_20260214_224009.pkl  preprocessing.joblib
Backend/ml_models/relationship/: .gitkeep  preprocessing.joblib  relationship_model_best.joblib
Backend/ml_models/renewal/: .gitkeep  preprocessing.joblib  renewal_model_best.joblib  renewal_model_best_20260214_214502.pkl  renewal_preprocessing_20260214_214502.pkl
Backend/ml_models/sentiment/: .gitkeep  sentiment_config_20260215_003343.json
Backend/ml_models/upsell/: .gitkeep  preprocessing.joblib  upsell_preprocessing_20260214_200240.pkl
Backend/scripts/: clear_all_emails.py  load_models.py  push_test_accounts_to_supabase.py  reset_and_setup_database.py  reset_and_setup_database_alt.py  reset_email_dates.py  run_server.py  seed_account_timeline.py  seed_auto_campaign_20pct_discount.py  seed_billing_interval.py  seed_data.py  seed_db.py  seed_monthly_accounts.py  seed_opportunities_for_monthly.py  seed_pipeline_schedules.py  test_ml_pipeline.py  test_voice_bot.py  trigger_calls_now.py  truncate_and_push_test_data.py  truncate_email_table.py  update_test_dataset_pipeline_stages.py
Backend/tests/test_api/: test_accounts.py  test_predictions.py
Backend/tests/test_services/: test_ml_services.py  test_workflows.py
Backend/tests/test_utils/: __init__.py
New-Backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
New-Backend/alembic/: env.py
New-Backend/app/: __init__.py  main.py
New-Backend/app/agents/: email_intent_graph.py  nba_graph.py  scoring_graph.py  voice_graph.py  workflow_executor_graph.py
New-Backend/app/core/: config.py  deps.py  logging.py  security.py
New-Backend/app/db/: mongo.py  redis_client.py  session.py
New-Backend/app/models/: entities.py
New-Backend/app/workers/: celery_app.py  tasks.py
New-Backend/schemas/: scoring_config.example.json
New-Backend/scripts/: seed_dev_data.py  tech_plan_audit.py
New-Backend/tests/: test_llm_config.py
New-Backend/tests/contract/: test_api_routes.py
New-Backend/tests/unit/: test_classification.py  test_formulas.py
Research/: pyproject.toml
Research/Churn/: EDA.ipynb  model.ipynb
Research/Churn/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
Research/Churn/models/: churn_best_params.joblib  churn_cat.joblib  churn_feature_names.json  churn_lgb.joblib  churn_model_logistic_regression_20260214_192352.pkl  churn_model_random_forest_20260214_192352.pkl  churn_model_stacking_classifier_20260214_192352.pkl  churn_model_svm_20260214_192352.pkl  churn_model_voting_classifier_20260214_192352.pkl  churn_model_xgboost_20260214_192352.pkl  churn_rf.joblib  churn_scaler.joblib  churn_xgb.joblib  model_results_20260214_192352.csv  model_results_20260214_192352.pkl  preprocessing_20260214_192352.pkl
Research/HealthScore/: EDA.ipynb  Prediction.ipynb  model.ipynb
Research/HealthScore/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
Research/HealthScore/data/: healthscore_predictions.xlsx  model.xlsx  transformed_model_data.xlsx
Research/HealthScore/models/: health_best_params.joblib  health_cat.joblib  health_feature_names.json  health_lgb.joblib  health_rf.joblib  (+18 more)
Research/Relationship/: EDA.ipynb  Perdiction.ipynb  model.ipynb
Research/Renewal/: EDA.ipynb  model.ipynb
Research/Sentiment/: EDA.ipynb  model.ipynb
Research/Upsell/: EDA.ipynb
Research/Upsell_detection/: main.ipynb  model.ipynb
Research/datamaking/: makedbdata.py  s007_synthetic_data.csv
Research/pushtodatabase/: push_data.py
(+416 files in other folders)
