[project]
name = "renewal-upsell-advisor-backend"
version = "0.1.0"
description = "FastAPI backend for Renewal & Upsell Advisor"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "email-validator>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
        # ML Dependencies
        "scikit-learn>=1.8.0",
        "joblib>=1.5.3",
        "pandas>=3.0.0",
        "numpy>=2.4.2",
        "xgboost>=3.2.0",
        "transformers>=5.1.0",
        "torch>=2.10.0",
        # Azure Services
        "azure-cognitiveservices-speech>=1.40.0",
        "openai>=1.54.0",
    # Database
    "psycopg2-binary>=2.9.9",
    "supabase>=2.0.0",
    # Integrations
    # "stripe>=8.0.0",  # Temporarily disabled due to wheel issue
    "twilio>=9.0.0",
    # Utilities
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
