[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "azure-cognitiveservices-speech>=1.48.2",
    "fastapi>=0.135.1",
    "joblib>=1.5.3",
    "langchain-core>=1.2.19",
    "langchain-openai>=1.1.11",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "pytz>=2026.1.post1",
    "requests>=2.32.5",
    "sendgrid>=6.12.5",
    "simple-salesforce>=1.12.9",
    "sqlalchemy>=2.0.48",
    "stripe>=14.4.1",
    "supabase>=2.28.2",
    "twilio>=9.10.3",
    "uvicorn>=0.41.0",
]
